<resources>
    <string name="app_name">AccessControl</string>
	
    <string name="imageContentDescription">This is an image</string>
    <string name="ipExample">127.0.0.1</string>
	
    <string name="alarmActive">Alarm is active</string>
    <string name="alarmText">You did not enter the correct code!
An image of you was send to the flat owner.
Police is informed!
Leave now!</string>

    <string name="accessControlActive">Access control is active</string>
    <string name="accessFailed">Access failed</string>
    <string name="accessSuccessful">Access successful</string>
    <string name="enterAccessCode">Enter access code</string>
    <string name="batteryText">99%</string>
    <string name="activateAlarm">Activate alarm</string>
    <string name="countdownExample">00:11:42</string>
    <string name="countdownZero">00:00:00</string>
    <string name="codeExample">******</string>
    <string name="loginNotification">LogIn Failed</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="ok">OK</string>
    <string name="reset">Reset</string>

    <string name="codeAccepted">Code accepted!</string>
    <string name="enteredInvalidCode">Entered invalid code!</string>
</resources>
