<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">

    <View
        android:id="@+id/alarmStateIndicator"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@xml/circle_green" />

    <TextView
        android:id="@+id/alarmStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/alarmStateIndicator"
        android:layout_alignTop="@+id/alarmStateIndicator"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/alarmStateIndicator"
        android:gravity="center"
        android:text="@string/accessSuccessful"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/activateAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@xml/button_blank_white"
        android:drawableTop="@android:drawable/ic_lock_idle_lock"
        android:text="@string/activateAlarm"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon"
        android:visibility="gone" />

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmStateIndicator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/countdownExample"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/buttonArrayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/codeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/code3Button"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/code1Button"
            android:gravity="center"
            android:text="@string/codeExample"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignEnd="@+id/code3Button"
            android:layout_alignStart="@+id/code1Button"
            android:layout_below="@+id/codeTextView"
            android:background="@color/TextIcon" />

        <TextView
            android:id="@+id/loginNotificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/code3Button"
            android:layout_alignStart="@+id/code1Button"
            android:layout_below="@+id/separator"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/loginNotification"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FF0000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code1Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginNotificationTextView"
            android:layout_margin="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/one"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code2Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/loginNotificationTextView"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code1Button"
            android:background="@xml/button_blank_white"
            android:text="@string/two"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code3Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/loginNotificationTextView"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code2Button"
            android:background="@xml/button_blank_white"
            android:text="@string/three"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code4Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/code1Button"
            android:layout_margin="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/four"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code5Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code2Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code4Button"
            android:background="@xml/button_blank_white"
            android:text="@string/five"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code6Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code3Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code5Button"
            android:background="@xml/button_blank_white"
            android:text="@string/six"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code7Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/code4Button"
            android:layout_margin="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/seven"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code8Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code5Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code7Button"
            android:background="@xml/button_blank_white"
            android:text="@string/eight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code9Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code6Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code8Button"
            android:background="@xml/button_blank_white"
            android:text="@string/nine"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/codeResetButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/code7Button"
            android:layout_margin="5dp"
            android:background="@xml/button_blank_white"
            android:text="@string/reset"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/code0Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code8Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/codeResetButton"
            android:background="@xml/button_blank_white"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <Button
            android:id="@+id/codeOkButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/code9Button"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/code0Button"
            android:background="@xml/button_blank_white"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/alarmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:drawableTop="@android:drawable/ic_dialog_alert"
        android:gravity="center"
        android:text="@string/alarmText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:id="@+id/batteryAlarm"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignBottom="@+id/batteryTextView"
        android:layout_alignTop="@+id/batteryTextView"
        android:layout_toStartOf="@+id/batteryTextView"
        android:background="@xml/circle_green" />

    <TextView
        android:id="@+id/batteryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ipAddressTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="2dp"
        android:text="@string/batteryText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ipAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ipExample"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>